# LightLog

./: CMakeLists.txt  README.md  example.cpp
LightLog/: LightLogConfig.cmake
LightLog/include/: Log.h
LightLog/src/: Log.cpp
